--- a/templates/PageWebcss/Page_username.css
+++ b/templates/PageWebcss/Page_username.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: #111;
     display: flex;
@@ -21,7 +20,21 @@ h1 {
     font-size: 28px;
     color: #00ff00;
     text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
+    animation-duration: 3s;
+    animation-name: slidein;
 }
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
 
 p {
     font-size: 16px;
