--- a/templates/PageWebhtml/Page_username.html
+++ b/templates/PageWebhtml/Page_username.html
@@ -4,22 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title>Ma page de connexion</title>
-    <link rel="stylesheet" href=""  type="text/css" />
+    <link rel="stylesheet" href="C:\Users\lnoha\OneDrive\Documents\Hangman-web\templates\PageWebcss\Page_username.css" type="text/css" />
 </head>
 
 <body>
     <div class="Login">
             <h1>Bienvenue au jeu du Pendu !</h1>
             <p> Veillez entrer votre nom</p>
-            <form action="C:\Users\lnoha\OneDrive\Documents\Hangman-web\PageWebhtml\Page_acceuil.html" method="get">
                 <div class="input-box">
                     <input type="text" name="username" placeholder="Username" required>
                 </div>
-                <button type="submit"><span><a class="btn">Entrer</a></span><i></i></button>
-            </form>
+                <button style="--clr:#39FF14"><span><a class="btn"href="C:\Users\nicol\OneDrive\Documents\Web\HangmanWeb\PageWebhtml\Page_regle_du_jeu.html">Entrer</a></span><i></i></button>
             <div class="register-link">
             </div>
     </div>
 </body>
-
 </html>
