amelioration css & html

--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -7,14 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/acceuil.css" />
 
-    <title>Hangman</title>
-
 </head>
 
 <body>
-<h1 class="title">HANGMAN</h1>
+<div class="Login">
 <div>
     <form action="accueil" method="post" >
+        <h1>Bienvenue au jeu du Pendu !</h1>
         <input id= "pseudo" required type="text" name="nom_utilisateur" placeholder="Entrez votre pseudo" autocomplete="off">
         <div class = "niveaux">
             <input class="replay" type="submit" value="EASY" id="btn1"    name="bouton">
