--- a/templates/css/index.css
+++ b/templates/css/index.css
@@ -2,11 +2,14 @@
   src: url("../fonts/PermanentMarker-Regular (1).woff2") format("woff2");
   font-family: "Permanent Marker";
 }
+
 body {
   background-image:url('../images/Neonback.gif');
   background-size:200%;
   background-repeat:no-repeat;
   background-position:center center;
+  background-color: #111;
+  color: #fff;
 
 }
 
@@ -32,17 +35,16 @@ pre{
     width  : 28%;
     height : 300px;
     background : rgb(228, 234, 240);
-
     display: flex;
     justify-content: center;
     align-items: flex-end;
-   text-align: center;
-     margin-right: auto;
-     margin-left: auto;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
  }
 img{
-  width : 70%;
-  height :40%;
+  width : 60%;
+  height :30%;
 }
 .Suggest{
   color: rgb(228, 234, 240);
@@ -55,37 +57,33 @@ img{
   color: white;
 }
 
-h6{
-  text-align: center;
-  font-size: 100%;
-}
-
-
 input[type="text"]{
   font-family: 'Permanent Marker';
   position: relative;
+  background: #333;
+  color: #fff;
   display: block;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  height: 40px;
-  width: 400px;
-  font-size: 2em;
-  color: #3C3534;
+  text-align: center;
+  height: 25px;
+  width: 200px;
+  font-size: 1em;
 }
+
 .niveaux input{
   font-family: 'Permanent Marker';
-  font-size: 20px;
-  width: 200px;
+  font-size: 25px;
   margin-left: auto;
   margin-right: auto;
   display: block;
+  border-radius: 5px;
 
   position: relative;
-  padding: 15px 30px;
-  color: #3C3534;
+  padding: 10px 20px;
   text-transform: uppercase;
-  letter-spacing: 4px;
+  letter-spacing: 3px;
   text-decoration: none;
   overflow: hidden;
   transition: 0.2s;
@@ -100,3 +98,4 @@ input[type="text"]{
   transition: 1s;
   transition-delay: 0.1s;
 }
+
