--- a/templates/css/acceuil.css
+++ b/templates/css/acceuil.css
@@ -1,9 +1,4 @@
 
-@font-face {
-  src: url("../fonts/PermanentMarker-Regular (1).woff2") format("woff2");
-  font-family: "Permanent Marker";
-}
-
 body {
     background-color: #111;
     display: flex;
@@ -11,7 +6,8 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    color: #fff;
+    color: #00ff00;
+    text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
 }
 
 
@@ -27,6 +23,7 @@ body {
 
 h1 {
     font-size: 28px;
+    font-family: 'Tilt Neon', sans-serif;
     color: #00ff00;
     text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
     animation-duration: 3s;
@@ -35,10 +32,11 @@ h1 {
 
 
 .niveaux input{
-  font-family: 'Permanent Marker';
+  font-family: 'Tilt Neon', sans-serif;
   padding: 10px;
   background: #333;
-  color: #fff;
+  color: #00ff00;
+  text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
   font-size: 1em;
   margin-top: 2%;
   width: 200px;
@@ -49,12 +47,12 @@ h1 {
 
 
 input[type="text"]{
-  font-family: 'Permanent Marker';
+  font-family: 'Tilt Neon', sans-serif;
   background: #333;
-  color: #fff;
+  color: #00ff00;
+  text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   text-align: center;
   position: relative;
   display: block;
@@ -63,6 +61,5 @@ input[type="text"]{
   text-align: center;
   height: 10px;
   width: 180px;
-  font-size: 1em;
   margin-top: 2%;
 }
