--- a/templates/loose.html
+++ b/templates/loose.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/loose.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
     <title>Document</title>
 
 </head>
@@ -19,7 +22,7 @@
     <p>
         The word was : {{ .WordToGuess }}
     </p>
-    <h2><img src="images/10.png" class="img"></h2>
+    <h2><img src="images/image12.png" class="img"></h2>
 </div>
 <form action="/" method="post">
     <div class = "niveaux">
