--- a/Hangman-web/templates/css/win.css
+++ b/Hangman-web/templates/css/win.css
@@ -10,7 +10,6 @@ body {
     height: 100vh;
     margin: 0;
     color: #fff;
-
 }
 .element1 {
     
@@ -34,7 +33,6 @@ h1{
     font-size: 50px;
     color: #00ff00;
     text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
-
 }
 table{
     margin-top: 50px;
@@ -71,8 +69,7 @@ h3{
     text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
 }
 .replay:hover{
-    color: #00ff00;
-    text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
+    color: #000000;
     background: azure;
     box-shadow: 0 0 10px azure,
     0 0 40px azure,
