--- a/Hangman-web/templates/css/index.css
+++ b/Hangman-web/templates/css/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image:url('../images/Neonback.gif');
+  background-image:url('../images/Neonback2.gif');
   background-size:200%;
   background-repeat:no-repeat;
   background-position:center center;
