--- a/Hangman-web/templates/css/accueil.css
+++ b/Hangman-web/templates/css/accueil.css
@@ -1,4 +1,5 @@
 body {
+  background-image:url('../images/Neonback.gif');
   background-color: #111;
   display: flex;
   align-items: center;
@@ -7,14 +8,7 @@ body {
   margin: 0;
   color: #00ff00;
   text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
-  background-color: #111;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-  color: #00ff00;
-  text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
+  
 }
 .Login {
   background: #222;
@@ -99,4 +93,11 @@ border-radius: 5px;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 color: #00ff00;
 text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.8);
+}
+.texte-centre {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Utilise la hauteur de la fenêtre comme référence pour le centrage vertical */
 }
