--- a/Hangman-web/templates/accueil.html
+++ b/Hangman-web/templates/accueil.html
@@ -2,41 +2,56 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Métadonnées du document -->
+    <meta charset="UTF-8"> <!-- Encodage des caractères -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Compatibilité avec Internet Explorer -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Dimensionnement sur les appareils mobiles -->
+    
+    <!-- Feuille de style externe -->
     <link rel="stylesheet" href="css/accueil.css">
+    
+    <!-- Préconnexion aux serveurs de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <!-- Chargement de la police "Tilt Neon" depuis Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <!-- Section principale du corps de la page -->
     <div class="Login">
         <div>
+            <!-- Formulaire avec action "accueil" et méthode POST -->
             <form action="accueil" method="post">
+                <!-- Titre principal -->
                 <h1>Bienvenue au jeu du Pendu !</h1>
-                <input id="pseudo" required type="text" name="nom_utilisateur" placeholder="Entrez votre pseudo"
-                    autocomplete="off">
+                
+                <!-- Champ de saisie du pseudo -->
+                <input id="pseudo" required type="text" name="nom_utilisateur" placeholder="Entrez votre pseudo" autocomplete="off">
+                
+                <!-- Sélection de la difficulté avec des boutons -->
                 <div class="niveaux">
                     <input class="replay" type="submit" value="EASY" id="btn1" name="bouton">
                     <input class="replay2" type="submit" value="NORMAL" id="btn2" name="bouton">
                     <input class="replay3" type="submit" value="HARD" id="btn3" name="bouton">
                 </div>
+                
+                <!-- Section des instructions du jeu -->
                 <div>
-        <p>
-        Vous devez deviner un mot en suggérant des lettres, un par un. Vous avez un nombre limité d'essais (10) avant de perdre la partie.
-        </p>
-    <ul>
-        <p>Si la lettre proposée n'est pas dans le mot secret, le joueur perd un essai.</p> 
-        <p>Le joueur gagne s'il devine toutes les lettres du mot secret avant d'épuiser tous ses essais.</p>
-        <p>Attention, vous pouvez proposer une lettre déjà marquée au début, par exemple dans le mot lavabo, le premier A est visible mais pas le second!</p>
-        <p>Donner plusieurs lettres en meme temps compte comme plusieurs erreurs et donner un mot complet aussi!</p>
-    </ul>
-    </div>
+                    <p>
+                        Vous devez deviner un mot en suggérant des lettres, un par un. Vous avez un nombre limité d'essais (10) avant de perdre la partie.
+                    </p>
+                    <ul>
+                        <p>Si la lettre proposée n'est pas dans le mot secret, le joueur perd un essai.</p>
+                        <p>Le joueur gagne s'il devine toutes les lettres du mot secret avant d'épuiser tous ses essais.</p>
+                        <p>Attention, vous pouvez proposer une lettre déjà marquée au début, par exemple dans le mot lavabo, le premier A est visible mais pas le second!</p>
+                        <p>Donner plusieurs lettres en même temps compte comme plusieurs erreurs et donner un mot complet aussi!</p>
+                    </ul>
+                </div>
             </form>
         </div>
     </div>
-    
 </body>
+
 </html>
