--- a/Hangman-web/templates/loose.html
+++ b/Hangman-web/templates/loose.html
@@ -2,32 +2,50 @@
 <html lang="fr">
 
 <head>
+    <!-- Métadonnées du document -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Feuille de style externe -->
     <link rel="stylesheet" href="css/loose.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
-    <title>Document</title>
 
+    <!-- Préconnexion aux serveurs de Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <!-- Chargement de la police "Tilt Neon" depuis Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
+    
+    <!-- Titre du document -->
+    <title>Document</title>
 </head>
 
 <body>
-<div>
-    <h1> You loose! </h1>
-</div>
-<div>
-
-    <p>
-        The word was : {{ .WordToGuess }}
-    </p>
-    <h2><img src="images/image12.png" class="img"></h2>
-</div>
-<form action="/" method="post">
-    <div class = "niveaux">
-        <h2><input class = "replay" type="submit" value="Play Again" name="boutonLoose"></h2>
+    <!-- Première section -->
+    <div>
+        <!-- Titre de niveau 1 -->
+        <h1>You loose!</h1>
     </div>
-</form>
+    
+    <!-- Deuxième section -->
+    <div>
+        <!-- Paragraphe contenant le texte dynamique de {{ .WordToGuess }} -->
+        <p>
+            The word was: {{ .WordToGuess }}
+        </p>
+        
+        <!-- Titre de niveau 2 avec une image provenant de "images/image12.png" et une classe "img" -->
+        <h2><img src="images/image12.png" class="img"></h2>
+    </div>
+
+    <!-- Formulaire avec action "/" et méthode POST -->
+    <form action="/" method="post">
+        <!-- Div avec la classe "niveaux" contenant un titre de niveau 2 et un bouton de soumission -->
+        <div class="niveaux">
+            <h2><input class="replay" type="submit" value="Play Again" name="boutonLoose"></h2>
+        </div>
+    </form>
 </body>
+
 </html>
