--- a/Hangman-web/templates/win.html
+++ b/Hangman-web/templates/win.html
@@ -2,43 +2,64 @@
 <html lang="fr">
 
 <head>
+    <!-- Métadonnées du document -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Feuille de style externe -->
     <link rel="stylesheet" href="css/win.css" />
+    
+    <!-- Préconnexion aux serveurs de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <!-- Chargement de la police "Tilt Neon" depuis Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
-
+    
+    <!-- Titre du document -->
     <title>Document</title>
 </head>
 
 <body>
-<h1>You win!</h1>
-<table>
-    <thead>
-    <tr>
-        <td class="element1">Name</td>
-        <td class="element2">Tries</td>
-    </tr>
-    </thead>
-    <tbody>
-    <div class="contenu">
-        <p>
-            The word was : {{ .WordToGuess }}
-        </p>
-        <h2></h2>
-    </div>
+    <!-- Titre de niveau 1 -->
+    <h1>You win!</h1>
+    
+    <!-- Tableau -->
+    <table>
+        <!-- En-tête du tableau -->
+        <thead>
+            <tr>
+                <td class="element1">Name</td>
+                <td class="element2">Tries</td>
+            </tr>
+        </thead>
+        
+        <!-- Corps du tableau -->
+        <tbody>
+            <!-- Div avec la classe "contenu" -->
+            <div class="contenu">
+                <!-- Paragraphe contenant le texte dynamique de {{ .WordToGuess }} -->
+                <p>
+                    The word was: {{ .WordToGuess }}
+                </p>
+                <!-- Titre de niveau 2 -->
+                <h2></h2>
+            </div>
 
-    <tr><td class="element1">{{ .Pseudo }}</td>
-        <td class="element2">{{ .Tries }}/10</td>
+            <!-- Ligne du tableau avec des données dynamiques de {{ .Pseudo }} et {{ .Tries }}/10 -->
+            <tr>
+                <td class="element1">{{ .Pseudo }}</td>
+                <td class="element2">{{ .Tries }}/10</td>
+            </tr>
+        </tbody>
+    </table>
 
-    </tr>
-    </tbody>
-</table>
-
-<form action="/" method="post">
-    <h3><input class = "replay" type="submit" value="Play Again" name="boutonWin"></h3>
-</form>
+    <!-- Formulaire avec action "/" et méthode POST -->
+    <form action="/" method="post">
+        <!-- Titre de niveau 3 avec un bouton de soumission -->
+        <h3><input class="replay" type="submit" value="Play Again" name="boutonWin"></h3>
+    </form>
 </body>
+
 </html>
