Passage du jeu en Francais

--- a/Hangman-web/templates/accueil.html
+++ b/Hangman-web/templates/accueil.html
@@ -32,9 +32,9 @@
                 
                 <!-- Sélection de la difficulté avec des boutons -->
                 <div class="niveaux">
-                    <input class="replay" type="submit" value="EASY" id="btn1" name="bouton">
+                    <input class="replay" type="submit" value="FACILE" id="btn1" name="bouton">
                     <input class="replay2" type="submit" value="NORMAL" id="btn2" name="bouton">
-                    <input class="replay3" type="submit" value="HARD" id="btn3" name="bouton">
+                    <input class="replay3" type="submit" value="DIFFICILE" id="btn3" name="bouton">
                 </div>
                 
                 <!-- Section des instructions du jeu -->
