--- a/Hangman-web/templates/loose.html
+++ b/Hangman-web/templates/loose.html
@@ -25,14 +25,14 @@
     <!-- Première section -->
     <div>
         <!-- Titre de niveau 1 -->
-        <h1>You loose!</h1>
+        <h1>Tu as perdu !</h1>
     </div>
     
     <!-- Deuxième section -->
     <div>
         <!-- Paragraphe contenant le texte dynamique de {{ .WordToGuess }} -->
         <p>
-            The word was: {{ .WordToGuess }}
+            Le mot caché était : {{ .WordToGuess }}
         </p>
         
         <!-- Titre de niveau 2 avec une image provenant de "images/image12.png" et une classe "img" -->
@@ -43,7 +43,7 @@
     <form action="/" method="post">
         <!-- Div avec la classe "niveaux" contenant un titre de niveau 2 et un bouton de soumission -->
         <div class="niveaux">
-            <h2><input class="replay" type="submit" value="Play Again" name="boutonLoose"></h2>
+            <h2><input class="replay" type="submit" value="REVANCHE" name="boutonLoose"></h2>
         </div>
     </form>
 </body>
