ajout dde l'autofocus dans index

--- a/Hangman-web/templates/index.html
+++ b/Hangman-web/templates/index.html
@@ -33,7 +33,7 @@
             <h2 class="Suggest">{{ .Suggest }}</h2>
         </div>
         <form action="/index" method="POST">
-            <input required type="text" class="button" name="lettre" autocomplete="off"><br>
+            <input required type="text" class="button" name="lettre" autocomplete="off" autofocus><br>
             <div class = "niveaux">
                 <h2><input type="submit" value="SOUMETTRE" class="button"></h2>
             </div>
